<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background"
tools:context=".LoginActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="50dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="50dp"
    android:layout_marginBottom="50dp"
    android:gravity="center"
    android:id="@+id/login"
    android:text="@string/sign_up"
    android:textColor="@color/white"
    android:textSize="35sp"
    android:textStyle="bold">
</TextView>

<EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/login"
    android:background="#30ffffff"
    android:layout_margin="10dp"
    android:hint="@string/username"
    android:drawableLeft="@drawable/ic_baseline_person_outline_24"
    android:drawablePadding="28dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white" />

<EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/username"
    android:background="#30ffffff"
    android:layout_margin="10dp"
    android:hint="@string/password"
    android:drawableLeft="@drawable/ic_baseline_info_24"
    android:drawablePadding="28dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white" />

<Button
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_below="@id/password"
    android:layout_marginTop="60dp"
    android:backgroundTint="@color/black"
    android:text="@string/login"
    android:textSize="20sp" />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/signup"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/register"
        android:textSize="20sp" />

<TextView
    android:id="@+id/forgotpass"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/signup"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="20dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:text="@string/forgot_password"
    android:textColor="@color/white"
    android:textSize="20sp" />

</RelativeLayout>